# cryptoengine-lib

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  TODO.txt  deps.sh  getdeps.sh  setup-travis.sh
CMake/: FindBoringSSL.cmake  FindLibCryptoEngine.cmake  FindLibNaCl.cmake  FindLibreSSL.cmake
lib/: CMakeLists.txt  README.md  base64.cpp  base64.h  conversions.cpp  cryptoengine.cpp  cryptoengine.h  cryptoengine_conversions.cpp  cryptoengine_conversions.h  cryptoengine_encrypted_message.cpp  cryptoengine_encrypted_message.h  cryptoengine_file_utils.cpp  cryptoengine_file_utils.h  cryptoengine_hex.cpp  cryptoengine_hkdf_utils.cpp  cryptoengine_hkdf_utils.h  cryptoengine_message.cpp  cryptoengine_message.h  hex.cpp  hex.h  verification_engine.cpp  verification_engine.h
tests/: CMakeLists.txt  README.md  main.cpp
tests/base64/: base64_test.cpp
tests/conversions/: conversions.cpp
tests/engine/: cryptoengine.cpp
tests/file_utils/: file_utils_test.cpp
tests/hex/: hex.cpp
tests/hkdf/: hkdf_test.cpp
tests/message/: message.cpp
tools/: boringssl.sh  check_deps.sh  gtest.sh  nacl.sh
